fixing collapsable navbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html, body {
+  height: 100%;
+}
 
 
 body {
@@ -9,11 +12,10 @@ body {
   background-repeat: no-repeat;
 }
 
-.col-4 {
+.info {
   background: #752800 !important;
 }
 
 .row-height {
   text-align: center;
-  
 }
